Set 'height' to 'auto' on breadcrumb nav to prevent background of the other header nav from overlapping on the bottom edge of the breadcrumb nav.

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,7 @@ nav h1 a {
 
 .breadcrumb {
   text-align: left;
+  height: auto;
 }
 
 
